crates/diffler/src/ui/snapshots/diffler__ui__log__tests__log_screen_renders_rows_with_refs_and_cursor.snap
---
source: crates/diffler/src/ui/log.rs
expression: terminal.backend()
---
" <cr> open commit · V select range · ? help                                                                             "
" d9516cb [feat/topic main] add beta note                                                                       test  1h "
"▌c1ac28f initial commit                                                                                        test  1h "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" LOG  fixture@main · mcp off                                                                                            "
