crates/diffler/src/ui/snapshots/diffler__ui__log__tests__log_visual_selection_highlights_the_range.snap
---
source: crates/diffler/src/ui/log.rs
expression: terminal.backend()
---
" <cr> open commit · V select range · ? help                                                                             "
"▌ db08b32 [main] add gamma note                                                                                test  1h "
"▌ d9516cb add beta note                                                                                        test  1h "
" c1ac28f initial commit                                                                                        test  1h "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" LOG  fixture@main · mcp off                                                                                            "
